--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
             align-items: center;
             justify-content: center;
         }
-        .buttons a .icon {
-            margin-left: 20px; /* زيادة المسافة بين النص والأيقونة */
+        .buttons a i {
+            margin-right: 10px; /* زيادة المسافة بين الأيقونة والنص */
         }
         .buttons a:hover {
             background-color: #5a6268;
@@ -123,8 +123,8 @@
             <img src="covers/غلاف الأسرة في الإسلام.jpeg" alt="غلاف الكتاب">
             <div class="book-title">الأسرة في الإسلام</div>
             <div class="buttons">
-                <a href="books/الأسرة في الإسلام.pdf" target="_blank">عرض<span class="icon"><i class="fas fa-eye"></i></span></a>
-                <a href="books/الأسرة في الإسلام.pdf" download>تحميل<span class="icon"><i class="fas fa-download"></i></span></a>
+                <a href="books/الأسرة في الإسلام.pdf" target="_blank"><i class="fas fa-eye"></i> عرض</a>
+                <a href="books/الأسرة في الإسلام.pdf" download><i class="fas fa-download"></i> تحميل</a>
             </div>
         </div>
 
@@ -133,8 +133,8 @@
             <img src="covers/غلاف الطائفية في نظر الاسلام.jpeg" alt="غلاف الكتاب">
             <div class="book-title">الطائفية في نظر الاسلام</div>
             <div class="buttons">
-                <a href="books/الطائفية في نظر الاسلام.pdf" target="_blank">عرض<span class="icon"><i class="fas fa-eye"></i></span></a>
-                <a href="books/الطائفية في نظر الاسلام.pdf" download>تحميل<span class="icon"><i class="fas fa-download"></i></span></a>
+                <a href="books/الطائفية في نظر الاسلام.pdf" target="_blank"><i class="fas fa-eye"></i> عرض</a>
+                <a href="books/الطائفية في نظر الاسلام.pdf" download><i class="fas fa-download"></i> تحميل</a>
             </div>
         </div>
 
