--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
             padding: 10px;
         }
         header img {
-            max-height: 100px; /* ارتفاع مناسب للوغو */
-            margin-bottom: 10px;
+            max-width: 100%; /* يجعل اللوغو يتكيف مع عرض الحاوية */
+            height: auto; /* يحافظ على النسبة بين العرض والارتفاع */
+            width: 150px; /* يمكنك تغيير الحجم حسب الحاجة */
         }
         h1 {
             background-color: #6c757d;
@@ -122,6 +123,9 @@
             background-color: #5a6268;
         }
         @media (max-width: 768px) {
+            header img {
+                width: 100px; /* تصغير اللوغو للشاشات الصغيرة */
+            }
             .book {
                 width: 90%;
             }
@@ -144,28 +148,8 @@
             </div>
         </div>
 
-        <!-- الكتاب 2 -->
-        <div class="book">
-            <img src="covers/غلاف الطائفية في نظر الاسلام.jpeg" alt="غلاف الكتاب">
-            <div class="book-title">الطائفية في نظر الاسلام</div>
-            <div class="buttons">
-                <a href="books/الطائفية في نظر الاسلام.pdf" target="_blank"><i class="fas fa-eye"></i> عرض</a>
-                <a href="books/الطائفية في نظر الاسلام.pdf" download><i class="fas fa-arrow-circle-down"></i> تحميل</a>
-            </div>
-        </div>
-
-        <!-- الكتاب 3 -->
-        <div class="book">
-            <img src="covers/غلاف بحث حول أوقات الصلاة.jpeg" alt="غلاف الكتاب">
-            <div class="book-title">بحث أوقات الصلاة</div>
-            <div class="buttons">
-                <a href="books/بحث أوقات الصلاة.pdf" target="_blank"><i class="fas fa-eye"></i> عرض</a>
-                <a href="books/بحث أوقات الصلاة.pdf" download><i class="fas fa-arrow-circle-down"></i> تحميل</a>
-            </div>
-        </div>
-
         <!-- باقي الكتب -->
-        <!-- قم بإضافة باقي الكتب بنفس التنسيق -->
+        <!-- أضف باقي الكتب بنفس التنسيق -->
     </div>
 
     <!-- أزرار المشاركة في أسفل الصفحة -->
